--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="canonical" href="http://dev.7419.tech/">
-    <link rel="amphtml" href="https://ruicosta-mirr.xyz/slot-ig/dev.7419" />
-	<meta name="google-site-verification" content="FUh378_8pPqUro88ato86j8Gf1DaBmnovaylhijA3Ok" />
-	<meta name="google-site-verification" content="VrYsRmTEMXhzVCkqm8KWFwrZFGKeAClepHc9u1WpThk" />
-	<meta name="google-site-verification" content="1JnwfZSkKnMchiO1R4lVLl3CdJWiV4FXDVrSc8JyT5c" />
+    <link rel="canonical" href="https://dev.vrcunity.org/">
+    <link rel="amphtml" href="https://ruicosta-mirr.xyz/slot-ig/dev.vrcunity" />
+	<meta name="google-site-verification" content="sDVFUYq26SlS9xWwmf9M85k4DDmw40nIAVLdN-dWysg" />
+	<meta name="google-site-verification" content="p6wzv6Wt5sHTYXKGVXhPgZeHv0qZ8SGoKyHdpXBRF3A" />
+	<meta name="google-site-verification" content="JkX9cYhtj4NJ0yZuAleta9RKCn2MWVhKmfwU6kNbiE4" />
 	<meta name="keywords" content="Slot Ig"/>
 	<meta name="robots" content="index, follow" />
 	<meta content="true" name="HandheldFriendly">
@@ -36,7 +36,7 @@
     
 
 <meta property="og:site_name" content="Slot Ig">
-<meta property="og:url" content="http://dev.7419.tech/">
+<meta property="og:url" content="https://dev.vrcunity.org/">
 <meta property="og:title" content="Slot Ig Login PG Soft Slot Ig Maxwin Instagram Slot Ig Play">
 <meta property="og:type" content="product">
 <meta property="og:description" content="Slot Ig terbaru maxwin pg soft atau pocket gaming yakni developer daftar play Slot Ig melewati bank BSI 24 jam mudah menang."><meta property="og:image" content="https://alpha01json.site/img/2umum.jpg?v=1718010550">
@@ -53,7 +53,7 @@
     <script src="https://adambadzynski.com/cdn/shop/t/2/assets/global.js?v=136628361274817707361718010417" defer="defer"></script><script src="https://adambadzynski.com/cdn/shop/t/2/assets/animations.js?v=88693664871331136111718010416" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/61891739708/digital_wallets/dialog">
 <meta name="shopify-checkout-api-token" content="361ddad5f611c173eb5d3d81e7171092">
 <meta id="in-context-paypal-metadata" data-shop-id="61891739708" data-venmo-supported="false" data-environment="production" data-locale="en_US" data-paypal-v4="true" data-currency="AUD">
-<link rel="alternate" type="application/json+oembed" href="http://dev.7419.tech/.oembed">
+<link rel="alternate" type="application/json+oembed" href="https://dev.vrcunity.org/.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?locale=en-AU"></script>
 <script async="async" src="https://shop.app/checkouts/internal/preloads.js?locale=en-AU&shop_id=61891739708" crossorigin="anonymous"></script>
 <script id="shopify-features" type="application/json">{"accessToken":"361ddad5f611c173eb5d3d81e7171092","betas":["rich-media-storefront-analytics"],"domain":"adambadzynski.com","predictiveSearch":true,"shopId":61891739708,"smart_payment_buttons_url":"https:\/\/adambadzynski.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.en.js","dynamic_checkout_cart_url":"https:\/\/adambadzynski.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.en.js","locale":"en"}</script>
@@ -1279,11 +1279,11 @@ Item added to your cart
         <product-info
           id="ProductInfo-template--16368853844028__main"
           data-section="template--16368853844028__main"
-          data-url="http://dev.7419.tech/"
+          data-url="https://dev.vrcunity.org/"
           class="product__info-container"
         ><div class="product__title" >
                   <h1>Slot Ig Login PG Soft Slot Ig Maxwin Instagram Slot Ig Play</h1>
-                  <a href="http://dev.7419.tech/" class="product__title">
+                  <a href="https://dev.vrcunity.org/" class="product__title">
                     <h2 class="h1">
                       Slot Ig Login PG Soft Slot Ig Maxwin Instagram Slot Ig Play
                     </h2>
@@ -1363,7 +1363,7 @@ Item added to your cart
                     </span>
                   </label>
                   <div class="price-per-item__container">
-                    <quantity-input class="quantity" data-url="http://dev.7419.tech/" data-section="template--16368853844028__main">
+                    <quantity-input class="quantity" data-url="https://dev.vrcunity.org/" data-section="template--16368853844028__main">
                       <button class="quantity__button" name="minus" type="button">
                         <span class="visually-hidden">Decrease quantity for Slot Ig Login PG Soft Slot Ig Maxwin Instagram Slot Ig Play</span>
                         <svg
@@ -1408,10 +1408,10 @@ Item added to your cart
                     </quantity-input></div>
                   <div class="quantity__rules caption" id="Quantity-Rules-template--16368853844028__main"></div></div><div class="product__description rte quick-add-hidden" >
                     <p><a href="https://t.ly/classic303-ford" title="Slot Ig"><img src="https://alpha01json.site/img/logo-cloaking.gif" data-mce-fragment="1" data-mce-src="https://alpha01json.site/img/logo-cloaking.gif"></a></p>
-<a href="http://dev.7419.tech/" title="Slot Ig">Slot Ig</a> terbaru maxwin pg soft atau pocket gaming yakni developer daftar play Slot Ig melewati bank BSI 24 jam mudah menang. Slot Ig play bisa mainkan segera di tautan play Slot Ig gacor bank BSI 24 jam dengan mengaplikasikan 1 user ID teregistrasi yang sama.<br>
+<a href="https://dev.vrcunity.org/" title="Slot Ig">Slot Ig</a> terbaru maxwin pg soft atau pocket gaming yakni developer daftar play Slot Ig melewati bank BSI 24 jam mudah menang. Slot Ig play bisa mainkan segera di tautan play Slot Ig gacor bank BSI 24 jam dengan mengaplikasikan 1 user ID teregistrasi yang sama.<br>
 </div>
 <!---->
-                  </div><a href="http://dev.7419.tech/" class="link product__view-details animate-arrow">
+                  </div><a href="https://dev.vrcunity.org/" class="link product__view-details animate-arrow">
             View full details
             <svg
   viewBox="0 0 14 10"
